# rosiwit_ws

./: .gitignore  map.pcd  map.pgm  map.yaml
src/rosiwit_app/: .coverage  .gitlab-ci.yml  Makefile  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/rosiwit_app/.devcontainer/: devcontainer.json
src/rosiwit_app/config/: app_params.yaml  waypoints.yaml
src/rosiwit_app/docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh
src/rosiwit_app/launch/: app_only.launch.py  sim_slam_nav.launch.py  system_bringup.launch.py
src/rosiwit_app/rosiwit_app/: __init__.py  app_node.py  map_manager.py  navigation_manager.py  system_manager.py  waypoint_server.py
src/rosiwit_app/rviz/: rosiwit_app.rviz
src/rosiwit_app/tests/: __init__.py  test_acceptance.py  test_app_node.py  test_config_and_launch.py  test_e2e.py  test_integration.py  test_map_manager.py  test_navigation_manager.py  test_regression.py  test_system_manager.py  test_waypoint_server.py
src/rosiwit_coverage_planner/: CMakeLists.txt  Dockerfile  OPTIMIZATION_REPORT.md  README.md  TEST_VALIDATION_REPORT.md  VERIFICATION_REPORT.md  docker-compose.yml  package.xml  run_test.sh
src/rosiwit_coverage_planner/config/: coverage_params.yaml
src/rosiwit_coverage_planner/docs/: README.md  api.md  architecture.md  changelog.md  deployment_report.md  documentation_report.md  requirements.md  security_report.md  test_report.md
src/rosiwit_coverage_planner/launch/: coverage_planner.launch.py
src/rosiwit_coverage_planner/map/: TEST_REPORT.txt  map.pgm  map.xzmap  map.yaml  path_output.txt  ros2_integration_test_results.json  spiral_path.txt  test_results.json  test_results_v2.json  visualization_report.html  zigzag_path.txt
src/rosiwit_coverage_planner/src/: coverage_planner_node.cpp  coverage_utils.cpp  main.cpp  map_preprocessor.cpp  planner_context.cpp  scan_direction_optimizer.cpp  spiral_planner.cpp  turn_optimizer.cpp  zigzag_planner.cpp  zone_decomposer.cpp
src/rosiwit_coverage_planner/test/: coverage_path_planner.py  integrated_test.py  path_planner.py  publish_map.py  ros2_coverage_planner_validation_report.md  standalone_test.py  test_acceptance.cpp  test_coverage_utils.cpp  test_integration.cpp  test_map_publisher.py  test_optimization.py  test_performance.cpp  test_ros2_integration.py  test_spiral_planner.cpp  test_turn_optimizer.cpp  test_zigzag_planner.cpp  test_zone_decomposer.cpp
src/rosiwit_navigation/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package.xml
src/rosiwit_navigation/config/: controller_params.yaml  costmap_params.yaml  navigation_params.yaml  obstacle_params.yaml  params.yaml  planner_params.yaml
src/rosiwit_navigation/docs/: API_REFERENCE.md  GETTING_STARTED.md  README.md  api.md  architecture.md  changelog.md  research_report.md  security_report.md  test_report.md
src/rosiwit_navigation/launch/: navigation.launch.py  rviz.launch.py
src/rosiwit_navigation/src/: README.md  main.cpp
src/rosiwit_navigation/test/: test_astar_planner.cpp  test_astar_planner_perf.cpp  test_diff_drive_controller.cpp  test_error_manager.cpp  test_event_bus.cpp  test_integration.cpp  test_narrow_passage.cpp  test_narrow_passage_detector.cpp  test_narrow_passage_enhanced.cpp  test_obstacle_avoidance.cpp  test_obstacle_detector.cpp  test_parameter_manager.cpp  test_performance.cpp  test_performance_benchmark.cpp  test_pid_controller.cpp  test_single_point_navigation.cpp  test_state_machine.cpp  test_trajectory_generator.cpp  test_trajectory_generator_edge.cpp  test_velocity_limiter.cpp
src/rosiwit_perception/: package.xml  setup.py
src/rosiwit_perception/launch/: avm.launch.py  ground_texture.launch.py
src/rosiwit_perception/rosiwit_perception/: avm_node.py  birdseye.py  config.py  ground_texture_mapper.py
src/rosiwit_perception/scripts/: avm_node  avm_node_wrapper  ground_texture_mapper_wrapper
src/rosiwit_simulator/: .gitlab-ci.yml  CMakeLists.txt  DEPENDENCIES.md  DEPLOYMENT.md  Jenkinsfile  README.md  debug_fisheye.py  package.xml
src/rosiwit_simulator/docker/: .dockerignore  Dockerfile  build.sh  docker-compose.yml  entrypoint.sh  run.sh
src/rosiwit_simulator/docs/: README.md  api.md  architecture.md  changelog.md  requirements.md  security_report.md  test_report.md
src/rosiwit_simulator/launch/: auto_drive_figure8.py  sim_slam_demo.launch.py  simulated_sensor.py  simulator_amcl_diff.launch.py  simulator_gazebo.launch.py  simulator_gazebo_3d.launch.py  simulator_map_server.launch.py  simulator_mapping_cartographer.launch.py  simulator_mapping_gmaping.launch.py  simulator_nav_movebase.launch.py  simulator_rviz.launch.py  simulator_slam_demo.launch.py
src/rosiwit_simulator/map/: test.pgm  test.yaml  test1.pbstream  test1.pgm  test1.yaml
src/rosiwit_simulator/rviz/: simulator_3d.rviz  urdf.rviz
src/rosiwit_simulator/scripts/: sim_drive.py
src/rosiwit_simulator/world/: house.world  room.world  test.world  test_empty.world
src/rosiwit_slam/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DEPENDENCIES.md  DEPLOYMENT.md  Jenkinsfile  README.md  package.xml  requirements.txt
src/rosiwit_slam/config/: default.yaml  livox_avia.yaml  optimized.yaml  ouster_os1.yaml  simulation.yaml  velodyne_vlp16.yaml
src/rosiwit_slam/docker/: .dockerignore  Dockerfile  Dockerfile.devel  build.sh  docker-compose.yml  entrypoint.sh  run.sh
src/rosiwit_slam/docs/: API_REFERENCE.md  ENVIRONMENT_SETUP.md  KEY_FUNCTIONS.md  MODULE_RELATIONS.md  OPTIMIZATION_IMPL_REPORT.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PROJECT_REPORT.md  QUICKSTART.md  README.md  TEST_CASES.md  TEST_DEFECTS.md  TEST_REPORT_SUMMARY.md  USAGE_GUIDE.md  WORK_SUMMARY.md  WSL_MAPPING_TEST_REPORT.md  architecture.md  changelog.md  localization_guide.md  research_report.md  rosiwit_slam.md  test_report.md
src/rosiwit_slam/include/: pch.hpp
src/rosiwit_slam/launch/: fast_lio2.launch.py  livox_avia.launch.py  slam.launch.py
src/rosiwit_slam/msg/: LocalizationStatus.msg
(+271 files in other folders)
