<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosiwit_app</name>
  <version>0.1.0</version>
  <description>Mobile robot unified application - orchestration layer for simulator, SLAM and navigation</description>
  <maintainer email="dev@rosiwit.com">AI Development Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Nav2 is optional - graceful degradation if not installed -->
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <depend>rosiwit_slam</depend>
  <depend>rosiwit_simulator</depend>
  <depend>diffbot_navigation</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
